# ya-conan-cmake-find-multi-template

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  mkbuild.sh
cmake/: DefaultTargets.cmake
conan/: conanfile.txt  mkbuild.sh
source/: CMakeLists.txt  main.cpp
